@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-09-11T08:28:42Z",
+  "timestamp" : "2022-09-11T16:33:09Z",
   "count_outdated" : 772,
   "uniques_outdated" : 403,
-  "count" : 793,
+  "count" : 794,
   "uniques" : 416,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-09-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
