@@ -1,3 +1,11 @@
+2022-09-11T16:33:09Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3032542333
+* notice: last 14d: unq all: 3 22
+* notice: prev accum: outdated-unq outdated-all / unq all: 403 772 / 416 793
+* notice: next accum: outdated-unq outdated-all / unq all: 403 772 / 416 794
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-09-11]
+
 2022-09-11T08:28:42Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3031124051
 * notice: last 14d: unq all: 3 21
